apps/prowlarr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
      annotations:
        homelab.dev/rollout-nonce: "2025-11-04-01"
    spec:
      containers:
        - name: prowlarr
          image: ghcr.io/linuxserver/prowlarr@sha256:9ef5d8bf832edcacb6082f9262cb36087854e78eb7b1c3e1d4375056055b2d82
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9696
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 75m
              memory: 256Mi
            limits:
              memory: 768Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
