apps/prowlarr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 80
      targetPort: 9696
